--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.properties.spring.json.trusted.packages=co.in.ad.study.kafka.core.model
 
 study.kafka.bootstrap-servers=localhost:29092
 study.kafka.topic.order=order-topic
 study.kafka.topic.customer=consumer-topic
 
+# Common Kafka Properties
+auto.create.topics.enable=true
