--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,3 +25,18 @@ services:
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+      
+  db:
+    image: postgres:14.1-alpine
+    restart: always
+    #environment:
+    #  - POSTGRES_USER=tehilab
+    #  - POSTGRES_PASSWORD=Zubur123
+    ports:
+      - '5432:5432'
+    #volumes: 
+    #  - db:/var/lib/postgresql/data
+
+#volumes:
+#  db:
+#    driver: local
