--- a/webServer/src/main/resources/application.properties
+++ b/webServer/src/main/resources/application.properties
@@ -3,9 +3,8 @@ spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.Str
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.properties.spring.json.trusted.packages=co.in.ad.study.kafka.core.model
 
-study.kafka.bootstrap-servers=localhost:29092
-study.kafka.topic.order=order-topic
-study.kafka.topic.customer=consumer-topic
+kafka.bootstrap-servers=localhost:29092
+kafka.topic.order=order-event-topic
 
 # Common Kafka Properties
 auto.create.topics.enable=true
