Added producer to anothr kafka topic from kafkaConsumer, Added user model and repository

--- a/kafkaConsumer/src/main/resources/application.properties
+++ b/kafkaConsumer/src/main/resources/application.properties
@@ -24,4 +24,4 @@ spring.datasource.password=postgres
 #spring.jpa.properties.hibernate.format_sql=true
 
 # below is a line of code that creates the tables from scratch
-#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update
