Added mor annotations to handle errors in webServer, Fix lineItemModel entity to not override item if exist

--- a/kafkaConsumer/src/main/resources/application.properties
+++ b/kafkaConsumer/src/main/resources/application.properties
@@ -15,9 +15,9 @@ spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/
-spring.datasource.username=postgres
-spring.datasource.password=postgres
- server.port=8081
+spring.datasource.username=tehilab
+spring.datasource.password=Zubur123
+server.port=8081
 #spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.show-sql=true
