--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,9 +29,9 @@ services:
   db:
     image: postgres:14.1-alpine
     restart: always
-    #environment:
-    #  - POSTGRES_USER=tehilab
-    #  - POSTGRES_PASSWORD=Zubur123
+    environment:
+      - POSTGRES_USER=tehilab
+      - POSTGRES_PASSWORD=Zubur123
     ports:
       - '5432:5432'
     #volumes: 
