Remove unnecessary files, Added some validations to webServer controller

--- a/kafkaConsumer/src/main/resources/application.properties
+++ b/kafkaConsumer/src/main/resources/application.properties
@@ -18,10 +18,9 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/
 spring.datasource.username=tehilab
 spring.datasource.password=Zubur123
 server.port=8081
-#spring.jpa.hibernate.ddl-auto=create
-#spring.jpa.hibernate.ddl-auto=create
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
 
-# below is a line of code that creates the tables from scratch
+
+#creates the tables from scratch
 spring.jpa.hibernate.ddl-auto=update
+
+spring.jackson.default-property-inclusion=non_null
