Add script for local run

--- a/kafkaConsumer/src/main/resources/application.properties
+++ b/kafkaConsumer/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.kafka.consumer.properties.spring.json.trusted.packages=co.in.ad.study.kaf
 kafka.bootstrap-servers=localhost:29092
 kafka.topic.customer=consumer-topic
 spring.kafka.consumer.group-id=consumers
+advertised.host.name = localhost
 
 # Common Kafka Properties
 auto.create.topics.enable=true
